[tool.poetry]
name = "opensky-network-database"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
psycopg2-binary = "^2.9.12"
mypy = "^2.1.0"
black = "^26.5.1"
isort = "^8.0.1"
dockstring = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
